# SwiftPan

./: .gitignore  README.md  build-manifest.json  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tombstone.txt  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: README.zh-CN.md  setup-r2.md  setup-r2.zh-CN.md  thumbnail-plan-native.md  thumbnail-plan.md  todo.md
scripts/: release.mjs
src/: main.tsx  tailwind.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  lib.rs  logger.rs  r2_client.rs  settings.rs  transfer_db.rs  transfer_fsm.rs  types.rs
src-tauri/src/background/: mod.rs
src-tauri/src/credential_vault/: mod.rs
src-tauri/src/download/: mod.rs
src-tauri/src/share/: mod.rs
src-tauri/src/sp_backend/: mod.rs
src-tauri/src/thumbnail/: mod.rs
src-tauri/src/upload/: mod.rs
src-tauri/src/usage/: http_instrument.rs  mod.rs
src/components/: DevEventConsole.tsx  EventBridge.tsx  TauriBrowser.tsx  TransferManager.tsx
src/components/charts/: CostTrendsChart.tsx  TrafficTrendsChart.tsx  UsageTrendsChart.tsx
src/components/fallback/: ErrorDisplay.tsx  GlobalError.tsx  LoadingSpinner.tsx
src/components/features/: AndroidBatchDownload.tsx  DeleteDialogs.tsx  FileItem.tsx  FileList.tsx  FilePopovers.tsx  FileTooltips.tsx  ResumableFileUploader.tsx  UploadProgressPanel.tsx
src/components/layout/: Layout.tsx  MobileSidebar.tsx  Sidebar.tsx
src/components/layouts/: AppLayout.tsx  AuthLayout.tsx
src/components/ui/: Button.tsx  ProgressCard.tsx  collapsible.tsx  container.tsx  drawer.tsx  segmented-progress.tsx
src/hooks/: use-desktop-file-transfer.ts  use-file-batch-action.ts  use-files.ts  use-mobile-file-transfer.ts  use-quota-data.ts  use-resumable-upload.ts  use-settings.ts  use-setup.ts  use-trends-export.ts  use-trends.ts  use-usage-summary.ts
src/lib/api/: bridge.d.ts  bridge.ts  errors.ts  index.ts  schemas.ts  tauriBridge.ts
src/lib/hash/: browser.ts
src/lib/utils/: index.ts
src/pages/: files.tsx  index.tsx  login.tsx  settings.tsx  setup.tsx  usage.tsx
src/routes/: _layout.tsx  index.tsx
src/routes/pages/: 404.tsx  FilesPage.tsx  LogPage.tsx  SettingsPage.tsx  SharesPage.tsx  TransfersPage.tsx  UsagePage.tsx
src/store/: app-store.ts  auth-store.ts  files-store.ts  log-store.ts  transfer-store.ts  upload-store.ts
src/styles/: globals.css  tailwind.css
src/types/: shims.d.ts
