[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
bytes = "1"
futures = "0.3"
rand = "0.8"
base64 = "0.22"
argon2 = "0.5"
chacha20poly1305 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
aws-sdk-s3 = "1"
aws-config = "1"
directories = "5"
once_cell = "1"
aws-credential-types = "1"
