[package]
name = "SwiftPan"
version = "1.0.0"
description = "Cloud drive using cloudflare R2"
authors = ["timspizza"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
bytes = "1"
futures = "0.3"
rand = "0.8"
base64 = "0.22"
argon2 = "0.5"
chacha20poly1305 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time", "sync"] }
directories = "5"
once_cell = "1"
reqwest = {version = "0.12.23", default-features = false, features = ["json", "http2", "charset", "rustls-tls-webpki-roots"] }
http = "1.1"
http-body = "1.0"
[target.'cfg(target_os = "android")'.dependencies]
opendal = { version = "0.54", default-features = false, features = ["services-s3"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
opendal = { version = "0.54", default-features = false, features = ["services-s3"] }
